escucho mensajes desde un filtro

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,3 +23,14 @@ services:
       - rabbitmq
     environment:
       - PYTHONUNBUFFERED=1
+
+  filter:
+    build:
+      context: .
+      dockerfile: filters/filter.dockerfile
+    depends_on:
+      - rabbitmq
+    links:
+      - rabbitmq
+    environment:
+      - PYTHONUNBUFFERED=1
