organize filter folders

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,10 +24,10 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
 
-  filter:
+  twentieth_century_filter:
     build:
       context: .
-      dockerfile: filters/filter.dockerfile
+      dockerfile: filters/twentieth_century/twentieth_century_filter.dockerfile
     depends_on:
       - rabbitmq
     links:
