--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,3 +45,14 @@ services:
       - rabbitmq
     environment:
       - PYTHONUNBUFFERED=1
+
+  arg_esp_production_filter:
+    build:
+      context: .
+      dockerfile: filters/arg_esp_production/arg_esp_production_filter.dockerfile
+    depends_on:
+      - rabbitmq
+    links:
+      - rabbitmq
+    environment:
+      - PYTHONUNBUFFERED=1
