--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,10 +35,10 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
 
-  aggregator:
+  twentieth_century_arg_esp_aggregator:
     build:
       context: .
-      dockerfile: aggregator/aggregator.dockerfile
+      dockerfile: aggregator/twentieth_century_arg_esp_aggregator/aggregator.dockerfile
     depends_on:
       - rabbitmq
     links:
