--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -112,35 +112,32 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
 
-  sentiment_filter:
-    build:
-      context: .
-      dockerfile: filters/sentiment_analizer/sentiment_analizer.dockerfile
-    depends_on:
-      - rabbitmq
-    links:
-      - rabbitmq
-    environment:
-      - PYTHONUNBUFFERED=1
-
-  sentiment_filter_1:
-    build:
-      context: .
-      dockerfile: filters/sentiment_analizer/sentiment_analizer.dockerfile
-    depends_on:
-      - rabbitmq
-    links:
-      - rabbitmq
-    environment:
-      - PYTHONUNBUFFERED=1
-
-  sentiment_filter_2:
-    build:
-      context: .
-      dockerfile: filters/sentiment_analizer/sentiment_analizer.dockerfile
-    depends_on:
-      - rabbitmq
-    links:
-      - rabbitmq
-    environment:
-      - PYTHONUNBUFFERED=1
+#  sentiment_filter:
+#    build:
+#      context: .
+#      dockerfile: filters/sentiment_analizer/sentiment_analizer.dockerfile
+#    image: sentiment_filter:latest
+#    depends_on:
+#      - rabbitmq
+#    links:
+#      - rabbitmq
+#    environment:
+#      - PYTHONUNBUFFERED=1
+#
+#  sentiment_filter_1:
+#    image: sentiment_filter:latest
+#    depends_on:
+#      - rabbitmq
+#    links:
+#      - rabbitmq
+#    environment:
+#      - PYTHONUNBUFFERED=1
+#
+#  sentiment_filter_2:
+#    image: sentiment_filter:latest
+#    depends_on:
+#      - rabbitmq
+#    links:
+#      - rabbitmq
+#    environment:
+#      - PYTHONUNBUFFERED=1
