--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
       context: ./rabbitmq
       dockerfile: rabbitmq.dockerfile
     ports:
-      - 15672:15672
+      - "15672:15672"
     healthcheck:
         test: ["CMD", "curl", "-f", "http://localhost:15672"]
         interval: 10s
@@ -112,32 +112,32 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
 
-#  sentiment_filter:
-#    build:
-#      context: .
-#      dockerfile: filters/sentiment_analizer/sentiment_analizer.dockerfile
-#    image: sentiment_filter:latest
-#    depends_on:
-#      - rabbitmq
-#    links:
-#      - rabbitmq
-#    environment:
-#      - PYTHONUNBUFFERED=1
-#
-#  sentiment_filter_1:
-#    image: sentiment_filter:latest
-#    depends_on:
-#      - rabbitmq
-#    links:
-#      - rabbitmq
-#    environment:
-#      - PYTHONUNBUFFERED=1
-#
-#  sentiment_filter_2:
-#    image: sentiment_filter:latest
-#    depends_on:
-#      - rabbitmq
-#    links:
-#      - rabbitmq
-#    environment:
-#      - PYTHONUNBUFFERED=1
+  sentiment_filter:
+    build:
+      context: .
+      dockerfile: filters/sentiment_analizer/sentiment_analizer.dockerfile
+    image: sentiment_filter:latest
+    depends_on:
+      - rabbitmq
+    links:
+      - rabbitmq
+    environment:
+      - PYTHONUNBUFFERED=1
+
+  sentiment_filter_1:
+    image: sentiment_filter:latest
+    depends_on:
+      - rabbitmq
+    links:
+      - rabbitmq
+    environment:
+      - PYTHONUNBUFFERED=1
+
+  sentiment_filter_2:
+    image: sentiment_filter:latest
+    depends_on:
+      - rabbitmq
+    links:
+      - rabbitmq
+    environment:
+      - PYTHONUNBUFFERED=1
