Generador de dockerfile

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,154 +1,142 @@
 services:
-  rabbitmq:
-    build:
-      context: ./rabbitmq
-      dockerfile: rabbitmq.dockerfile
-    ports:
-      - "15672:15672"
-    healthcheck:
-        test: ["CMD", "curl", "-f", "http://localhost:15672"]
-        interval: 10s
-        timeout: 5s
-        retries: 10
-    volumes:
-      - ./rabbitmq/config.ini:/config.ini
-
   client:
     build:
       context: .
       dockerfile: client/client.dockerfile
     depends_on:
-      - rabbitmq
-    links:
-      - rabbitmq
+    - rabbitmq
     environment:
-      - PYTHONUNBUFFERED=1
-
-  twentieth_century_arg_production_filter:
-    build:
-      context: .
-      dockerfile: filters/twentieth_century_arg_production/twentieth_century_arg_production_filter.dockerfile
-    depends_on:
-      - rabbitmq
+    - PYTHONUNBUFFERED=1files=short
     links:
-      - rabbitmq
-    environment:
-      - PYTHONUNBUFFERED=1
-
-  main_movie_filter:
-    build:
-      context: .
-      dockerfile: filters/main_movie_filter/main_movie_filter.dockerfile
-    depends_on:
-      - rabbitmq
-    links:
-      - rabbitmq
-    environment:
-      - PYTHONUNBUFFERED=1
-
-  twentieth_century_arg_esp_aggregator:
-    build:
-      context: .
-      dockerfile: aggregator/twentieth_century_arg_esp_aggregator/aggregator.dockerfile
-    depends_on:
-      - rabbitmq
-    links:
-      - rabbitmq
-    environment:
-      - PYTHONUNBUFFERED=1
-
-  esp_production_filter:
-    build:
-      context: .
-      dockerfile: filters/esp_production/esp_production_filter.dockerfile
-    depends_on:
-      - rabbitmq
-    links:
-      - rabbitmq
-    environment:
-      - PYTHONUNBUFFERED=1
-
-
-  top_5_countries_filter:
-    build:
-      context: .
-      dockerfile: filters/top_5_local/top_5_local.dockerfile
-    depends_on:
-      - rabbitmq
-    links:
-      - rabbitmq
-    environment:
-      - PYTHONUNBUFFERED=1
-
-  top_5_countries_aggregator:
-    build:
-      context: .
-      dockerfile: aggregator/top_aggregator/aggregator.dockerfile
-    depends_on:
-      - rabbitmq
-    links:
-      - rabbitmq
-    environment:
-      - PYTHONUNBUFFERED=1
-
+    - rabbitmq
   credits_joiner:
     build:
       context: .
       dockerfile: joiner/credits/credits_joiner.dockerfile
     depends_on:
-      - rabbitmq
-    links:
-      - rabbitmq
+    - rabbitmq
     environment:
-      - PYTHONUNBUFFERED=1
-
+    - PYTHONUNBUFFERED=1
+    links:
+    - rabbitmq
+  esp_production_filter:
+    build:
+      context: .
+      dockerfile: filters/esp_production/esp_production_filter.dockerfile
+    depends_on:
+    - rabbitmq
+    environment:
+    - PYTHONUNBUFFERED=1
+    links:
+    - rabbitmq
+  main_movie_filter:
+    build:
+      context: .
+      dockerfile: filters/main_movie_filter/main_movie_filter.dockerfile
+    depends_on:
+    - rabbitmq
+    environment:
+    - PYTHONUNBUFFERED=1
+    links:
+    - rabbitmq
+  rabbitmq:
+    build:
+      context: ./rabbitmq
+      dockerfile: rabbitmq.dockerfile
+    healthcheck:
+      interval: 10s
+      retries: 10
+      test: CMD curl -f http://localhost:15672
+      timeout: 5s
+    ports:
+    - 15672:15672
+    volumes:
+    - ./rabbitmq/config.ini:/config.ini
   ratings_joiner:
     build:
       context: .
       dockerfile: joiner/ratings/rating_joiner.dockerfile
     depends_on:
-      - rabbitmq
-    links:
-      - rabbitmq
+    - rabbitmq
     environment:
-      - PYTHONUNBUFFERED=1
+    - PYTHONUNBUFFERED=1
+    links:
+    - rabbitmq
   sentiment_aggregator:
     build:
       context: .
       dockerfile: aggregator/sentiment_aggregator/aggregator.dockerfile
     depends_on:
-      - rabbitmq
-    links:
-      - rabbitmq
+    - rabbitmq
     environment:
-      - PYTHONUNBUFFERED=1
-
+    - PYTHONUNBUFFERED=1
+    links:
+    - rabbitmq
   sentiment_filter:
     build:
       context: .
       dockerfile: filters/sentiment_analizer/sentiment_analizer.dockerfile
-    image: sentiment_filter:latest
     depends_on:
-      - rabbitmq
-    links:
-      - rabbitmq
+    - rabbitmq
     environment:
-      - PYTHONUNBUFFERED=1
-
-  sentiment_filter_1:
+    - PYTHONUNBUFFERED=1
     image: sentiment_filter:latest
-    depends_on:
-      - rabbitmq
     links:
-      - rabbitmq
-    environment:
-      - PYTHONUNBUFFERED=1
-
-  sentiment_filter_2:
-    image: sentiment_filter:latest
+    - rabbitmq
+  top_5_countries_aggregator:
+    build:
+      context: .
+      dockerfile: aggregator/top_aggregator/aggregator.dockerfile
     depends_on:
-      - rabbitmq
-    links:
-      - rabbitmq
+    - rabbitmq
     environment:
-      - PYTHONUNBUFFERED=1
+    - PYTHONUNBUFFERED=1
+    links:
+    - rabbitmq
+  top_5_countries_filter:
+    build:
+      context: .
+      dockerfile: filters/top_5_local/top_5_local.dockerfile
+    depends_on:
+    - rabbitmq
+    environment:
+    - PYTHONUNBUFFERED=1
+    links:
+    - rabbitmq
+  twentieth_century_arg_esp_aggregator:
+    build:
+      context: .
+      dockerfile: aggregator/twentieth_century_arg_esp_aggregator/aggregator.dockerfile
+    depends_on:
+    - rabbitmq
+    environment:
+    - PYTHONUNBUFFERED=1
+    links:
+    - rabbitmq
+  twentieth_century_arg_production_filter:
+    build:
+      context: .
+      dockerfile: filters/twentieth_century_arg_production/twentieth_century_arg_production_filter.dockerfile
+    depends_on:
+    - rabbitmq
+    environment:
+    - PYTHONUNBUFFERED=1
+    links:
+    - rabbitmq
+  twentieth_century_arg_production_filter_1:
+    depends_on:
+    - rabbitmq
+    environment:
+    - PYTHONUNBUFFERED=1
+    image: twentieth_century_arg_production_filter:latest
+    links:
+    - rabbitmq
+  twentieth_century_arg_production_filter_2:
+    depends_on:
+    - rabbitmq
+    environment:
+    - PYTHONUNBUFFERED=1
+    image: twentieth_century_arg_production_filter:latest
+    links:
+    - rabbitmq
+version: '3'
