Separar joiner en aggregator y procesador

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,16 +19,16 @@ services:
     - PYTHONUNBUFFERED=1
     links:
     - rabbitmq
-  esp_production_filter:
-    build:
-      context: .
-      dockerfile: filters/esp_production/esp_production_filter.dockerfile
-    depends_on:
-    - rabbitmq
-    environment:
-    - PYTHONUNBUFFERED=1
-    links:
-    - rabbitmq
+#  esp_production_filter:
+#    build:
+#      context: .
+#      dockerfile: filters/esp_production/esp_production_filter.dockerfile
+#    depends_on:
+#    - rabbitmq
+#    environment:
+#    - PYTHONUNBUFFERED=1
+#    links:
+#    - rabbitmq
   main_movie_filter:
     build:
       context: .
@@ -62,81 +62,61 @@ services:
     - PYTHONUNBUFFERED=1
     links:
     - rabbitmq
-  sentiment_aggregator:
+#  sentiment_aggregator:
+#    build:
+#      context: .
+#      dockerfile: aggregator/sentiment_aggregator/aggregator.dockerfile
+#    depends_on:
+#    - rabbitmq
+#    environment:
+#    - PYTHONUNBUFFERED=1
+#    links:
+#    - rabbitmq
+#  sentiment_filter:
+#    build:
+#      context: .
+#      dockerfile: filters/sentiment_analizer/sentiment_analizer.dockerfile
+#    depends_on:
+#    - rabbitmq
+#    environment:
+#    - PYTHONUNBUFFERED=1
+#    image: sentiment_filter:latest
+#    links:
+#    - rabbitmq
+  test:
     build:
       context: .
-      dockerfile: aggregator/sentiment_aggregator/aggregator.dockerfile
-    depends_on:
-    - rabbitmq
-    environment:
-    - PYTHONUNBUFFERED=1
-    links:
-    - rabbitmq
-  sentiment_filter:
-    build:
-      context: .
-      dockerfile: filters/sentiment_analizer/sentiment_analizer.dockerfile
-    depends_on:
-    - rabbitmq
-    environment:
-    - PYTHONUNBUFFERED=1
-    image: sentiment_filter:latest
-    links:
-    - rabbitmq
-  sentiment_filter_1:
-    depends_on:
-    - rabbitmq
-    environment:
-    - PYTHONUNBUFFERED=1
-    image: sentiment_filter:latest
-    links:
-    - rabbitmq
-  sentiment_filter_2:
-    depends_on:
-    - rabbitmq
-    environment:
-    - PYTHONUNBUFFERED=1
-    image: sentiment_filter:latest
-    links:
-    - rabbitmq
-  sentiment_filter_3:
-    depends_on:
-    - rabbitmq
-    environment:
-    - PYTHONUNBUFFERED=1
-    image: sentiment_filter:latest
-    links:
-    - rabbitmq
-  top_5_countries_aggregator:
-    build:
-      context: .
-      dockerfile: aggregator/top_aggregator/aggregator.dockerfile
-    depends_on:
-    - rabbitmq
-    environment:
-    - PYTHONUNBUFFERED=1
-    links:
-    - rabbitmq
-  top_5_countries_filter:
-    build:
-      context: .
-      dockerfile: filters/top_5_local/top_5_local.dockerfile
-    depends_on:
-    - rabbitmq
-    environment:
-    - PYTHONUNBUFFERED=1
-    links:
-    - rabbitmq
-  twentieth_century_arg_esp_aggregator:
-    build:
-      context: .
-      dockerfile: aggregator/twentieth_century_arg_esp_aggregator/aggregator.dockerfile
-    depends_on:
-    - rabbitmq
-    environment:
-    - PYTHONUNBUFFERED=1
-    links:
-    - rabbitmq
+      dockerfile: test/integration.dockerfile
+#  top_5_countries_aggregator:
+#    build:
+#      context: .
+#      dockerfile: aggregator/top_aggregator/aggregator.dockerfile
+#    depends_on:
+#    - rabbitmq
+#    environment:
+#    - PYTHONUNBUFFERED=1
+#    links:
+#    - rabbitmq
+#  top_5_countries_filter:
+#    build:
+#      context: .
+#      dockerfile: filters/top_5_local/top_5_local.dockerfile
+#    depends_on:
+#    - rabbitmq
+#    environment:
+#    - PYTHONUNBUFFERED=1
+#    links:
+#    - rabbitmq
+#  twentieth_century_arg_esp_aggregator:
+#    build:
+#      context: .
+#      dockerfile: aggregator/twentieth_century_arg_esp_aggregator/aggregator.dockerfile
+#    depends_on:
+#    - rabbitmq
+#    environment:
+#    - PYTHONUNBUFFERED=1
+#    links:
+#    - rabbitmq
   twentieth_century_arg_production_filter:
     build:
       context: .
@@ -146,11 +126,5 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     links:
-    - rabbitmq
-  test:
-    build:
-      context: .
-      dockerfile: test/integration.dockerfile
-    depends_on:
     - rabbitmq
 version: '3'
