Remover metodos innecesarios

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -52,10 +52,71 @@ services:
     - 15672:15672
     volumes:
     - ./rabbitmq/config.ini:/config.ini
-  ratings_joiner:
+#  ratings_joiner:
+#    build:
+#      context: .
+#      dockerfile: joiner/ratings/rating_joiner.dockerfile
+#    depends_on:
+#    - rabbitmq
+#    environment:
+#    - PYTHONUNBUFFERED=1
+#    links:
+#    - rabbitmq
+#  sentiment_aggregator:
+#    build:
+#      context: .
+#      dockerfile: aggregator/sentiment_aggregator/aggregator.dockerfile
+#    depends_on:
+#    - rabbitmq
+#    environment:
+#    - PYTHONUNBUFFERED=1
+#    links:
+#    - rabbitmq
+#  sentiment_filter:
+#    build:
+#      context: .
+#      dockerfile: filters/sentiment_analizer/sentiment_analizer.dockerfile
+#    depends_on:
+#    - rabbitmq
+#    environment:
+#    - PYTHONUNBUFFERED=1
+#    image: sentiment_filter:latest
+#    links:
+#    - rabbitmq
+#  top_5_countries_aggregator:
+#    build:
+#      context: .
+#      dockerfile: aggregator/top_aggregator/aggregator.dockerfile
+#    depends_on:
+#    - rabbitmq
+#    environment:
+#    - PYTHONUNBUFFERED=1
+#    links:
+#    - rabbitmq
+#  top_5_countries_filter:
+#    build:
+#      context: .
+#      dockerfile: filters/top_5_local/top_5_local.dockerfile
+#    depends_on:
+#    - rabbitmq
+#    environment:
+#    - PYTHONUNBUFFERED=1
+#    links:
+#    - rabbitmq
+#  twentieth_century_arg_esp_aggregator:
+#    build:
+#      context: .
+#      dockerfile: aggregator/twentieth_century_arg_esp_aggregator/aggregator.dockerfile
+#    depends_on:
+#    - rabbitmq
+#    environment:
+#    - PYTHONUNBUFFERED=1
+#    links:
+#    - rabbitmq
+  twentieth_century_arg_aggregator:
     build:
       context: .
-      dockerfile: joiner/ratings/rating_joiner.dockerfile
+      dockerfile: aggregator/twentieth_century_arg_aggregator/aggregator.dockerfile
     depends_on:
     - rabbitmq
     environment:
@@ -127,4 +188,4 @@ services:
     - PYTHONUNBUFFERED=1
     links:
     - rabbitmq
-version: '3'
+#version: '3'
