Sacar copias de archivos

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,8 +21,10 @@ services:
     - DECODIFIER_HOST=client_decodifier
     - DECODIFIER_PORT=50000
     volumes:
-    - ./root/files:/app/root/files
+    - ./files/movies_metadata.csv:/root/files/movies_metadata.csv
+    - ./files/credits.csv:/root/files/credits.csv
     - ./middleware:/app/middleware
+    - ./files/ratings_small.csv:/root/files/ratings.csv
   client_decodifier:
     build:
       context: .
