--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,16 @@ services:
     - PYTHONUNBUFFERED=1
     links:
     - rabbitmq
+  best_and_worst_ratings_aggregator:
+    build:
+      context: .
+      dockerfile: aggregator/best_and_worst_ratings_aggregator/aggregator.dockerfile
+    depends_on:
+    - rabbitmq
+    environment:
+    - PYTHONUNBUFFERED=1
+    links:
+    - rabbitmq
   client:
     build:
       context: .
@@ -91,7 +101,7 @@ services:
   ratings_joiner:
     build:
       context: .
-      dockerfile: joiner/ratings/rating_joiner.dockerfile
+      dockerfile: joiner/ratings/ratings_joiner.dockerfile
     depends_on:
     - rabbitmq
     environment:
@@ -183,3 +193,13 @@ services:
 #    - PYTHONUNBUFFERED=1
 #    links:
 #    - rabbitmq
+  workers_ratings:
+    build:
+      context: .
+      dockerfile: joiner/ratings/ratings_joiner.dockerfile
+    depends_on:
+    - rabbitmq
+    environment:
+    - PYTHONUNBUFFERED=1
+    links:
+    - rabbitmq
